--- a/technical_documentation_page/index.html
+++ b/technical_documentation_page/index.html
@@ -91,7 +91,7 @@
             Algoritma
             <pre>
               <code>
-PROGRAM Bisection
+<!-- PROGRAM Bisection
 
 f = lambda x : x**2 - 7*x + 10
 
@@ -112,7 +112,7 @@ while True:
 
     if not lanjut:
         break
-write(c)
+write(c) -->
               </code>
             </pre>
           </li>
@@ -120,7 +120,7 @@ write(c)
             Coding
             <pre>
               <code>
-a = float(input())
+<!-- a = float(input())
 b = float(input())
 toleransi = float(input())
 fa = f(a)
@@ -136,7 +136,7 @@ while True:
 
     if not lanjut:
         break
-print(c)
+print(c) -->
               </code>
             </pre>
           </li>
@@ -218,7 +218,7 @@ print(xNew) -->
             Algoritma
             <pre>
               <code>
-PROGRAM hitung akar dengan metode secant
+<!-- PROGRAM hitung akar dengan metode secant
 
 f = lambda x : x**2 - 5*x - 2
 
@@ -234,7 +234,7 @@ while True:
     x0 <- x1
     x2 <- x1
 
-write(x2)
+write(x2) -->
               </code>
             </pre>
           </li>
@@ -242,7 +242,7 @@ write(x2)
             Coding
             <pre>
               <code>
-f = lambda x : x**2 - 5*x - 2
+<!-- f = lambda x : x**2 - 5*x - 2
 
 # x(i-1) => x0
 # xi => x1
@@ -259,7 +259,7 @@ while True:
 
     x1, x0 = x2, x1
 
-print(x2)
+print(x2) -->
               </code>
             </pre>
           </li>
@@ -298,7 +298,7 @@ print(x2)
             Coding (Metode Upper dan Lower sum)
             <pre>
               <code>
-def integrasiNumerik(p, mBesar, mKecil):
+<!-- def integrasiNumerik(p, mBesar, mKecil):
 selisih = p[1] - p[0]
 totalMKecil = 0
 totalMBesar = 0
@@ -335,7 +335,7 @@ for i in range(n-1):
             print("INPUT TIDAK SESUAI")
     mBesar.append(temp)
 
-print(integrasiNumerik(p, mBesar, mKecil))
+print(integrasiNumerik(p, mBesar, mKecil)) -->
               </code>
             </pre>
           </li>
@@ -343,7 +343,7 @@ print(integrasiNumerik(p, mBesar, mKecil))
             Coding (Recursive Trapezoid)
             <pre>
               <code>
-import math
+<!-- import math
 ​
 def R(n):
     h = (math.pi / 2 - 0) / (2 ** n)
@@ -360,7 +360,7 @@ for n in range(0, 3 + 1):
 ​
 print("")
 ​
-print("Estimasi  Error = |R(3,0) – R(2,0)| = " + str(R(3) - R(2)))
+print("Estimasi  Error = |R(3,0) – R(2,0)| = " + str(R(3) - R(2))) -->
               </code>
             </pre>
           </li>
@@ -381,7 +381,7 @@ print("Estimasi  Error = |R(3,0) – R(2,0)| = " + str(R(3) - R(2)))
             Coding (eliminasi gauss)
             <pre>
               <code>
-def eliminasiGauss(matrik1, matrik2):
+<!-- def eliminasiGauss(matrik1, matrik2):
 for i in range(len(matrik1) - 1): # 1 <= i < jumlah variabel
     for j in range(i + 1, len(matrik1)): # j = baris setelah i sampai baris terakhir
         # Menentukan pengali untuk mengasilkan 0 pada kolom/variabel yang akan dieliminasi
@@ -396,7 +396,7 @@ for i in range(len(matrik1) - 1, -1, -1):
     for j in range(len(matrik1) - 1, i, -1):
         matrik2[i] = matrik2[i] - (hasil[j] * matrik1[i][j])
     hasil[i] = int(matrik2[i] / matrik1[i][i])
-return hasil
+return hasil -->
               </code>
             </pre>
           </li>
@@ -404,7 +404,7 @@ return hasil
             Coding (Gauss Seidel)
             <pre>
               <code>
-# x => X(k), y => X(k+1)
+<!-- # x => X(k), y => X(k+1)
 def jacobi(n, t, a, b):
     k = 1
     x = [0 for x in range(len(a))]
@@ -454,7 +454,7 @@ for i in range(length):
     b.append(konstanta)
     print("")
 
-jacobi(n, t, a, b)
+jacobi(n, t, a, b) -->
               </code>
             </pre>
           </li>
@@ -462,7 +462,7 @@ jacobi(n, t, a, b)
             Coding (jacobi)
             <pre>
               <code>
-# x => X(k), y => X(k+1)
+<!-- # x => X(k), y => X(k+1)
 def jacobi(n, t, a, b):
     x = [0 for x in range(len(a))]
     y = [0 for x in range(len(a))]
@@ -503,7 +503,7 @@ a = [
 ]
 
 b = [5, 20, 10]
-jacobi(20, 0.000001, a, b)
+jacobi(20, 0.000001, a, b) -->
               </code>
             </pre>
           </li>
